fixed select in modal overflow hidden

--- a/projects/tolle/theme.css
+++ b/projects/tolle/theme.css
@@ -200,3 +200,13 @@
   backdrop-filter: blur(4px);
   z-index: 50;
 }
+
+/* Hide scrollbar for modern browsers */
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
+
+.scrollbar-hidden {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
